Closed Bug 1360389 Opened 9 years ago Closed 9 years ago

Assertion failure in MediaKeys on shutdown

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

Details

Attachments

(1 file)

STR: 1. ./mach mochitest dom/media/test/test_eme_sample_groups_playback.html 2. Wait for test to finish 3. Close browser. 4. Observe assertion failure: GECKO(9228) | #01: nsThread::Dispatch (c:\users\chris\src\central\xpcom\threads\nsthread.cpp:858) GECKO(9228) | #02: mozilla::EventTargetWrapper::Dispatch (c:\users\chris\src\central\xpcom\threads\abstractthread.cpp:74) GECKO(9228) | #03: mozilla::ChromiumCDMProxy::Shutdown (c:\users\chris\src\central\dom\media\gmp\chromiumcdmproxy.cpp:364) GECKO(9228) | #04: mozilla::dom::MediaKeys::Shutdown (c:\users\chris\src\central\dom\media\eme\mediakeys.cpp:103) GECKO(9228) | #05: mozilla::dom::MediaKeys::~MediaKeys (c:\users\chris\src\central\dom\media\eme\mediakeys.cpp:69) GECKO(9228) | #06: mozilla::dom::MediaKeys::cycleCollection::DeleteCycleCollectable (c:\users\chris\src\central\obj-i686-pc-mingw32\dist\include\mozilla\dom\mediakeys.h:50) GECKO(9228) | #07: SnowWhiteKiller::~SnowWhiteKiller (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:2656) GECKO(9228) | #08: nsCycleCollector::FreeSnowWhite (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:2840) GECKO(9228) | #09: nsCycleCollector::BeginCollection (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3843) GECKO(9228) | #10: nsCycleCollector::Collect (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3693) GECKO(9228) | #11: nsCycleCollector::ShutdownCollect (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3603) GECKO(9228) | #12: nsCycleCollector::Shutdown (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3897) GECKO(9228) | #13: nsCycleCollector_shutdown (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:4216) GECKO(9228) | #14: mozilla::ShutdownXPCOM (c:\users\chris\src\central\xpcom\build\xpcominit.cpp:987) GECKO(9228) | #15: XRE_TermEmbedding (c:\users\chris\src\central\toolkit\xre\nsembedfunctions.cpp:226) GECKO(9228) | #16: mozilla::BootstrapImpl::XRE_InitChildProcess (c:\users\chris\src\central\toolkit\xre\bootstrap.cpp:65) GECKO(9228) | #17: content_process_main (c:\users\chris\src\central\ipc\contentproc\plugin-container.cpp:64) GECKO(9228) | #18: NS_internal_main (c:\users\chris\src\central\browser\app\nsbrowserapp.cpp:286) GECKO(9228) | #19: wmain (c:\users\chris\src\central\toolkit\xre\nswindowswmain.cpp:118) GECKO(9228) | #20: __scrt_common_main_seh (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:253) GECKO(9228) | #21: BaseThreadInitThunk[C:\Windows\System32\KERNEL32.DLL +0x162c4] GECKO(9228) | #22: RtlSubscribeWnfStateChangeNotification[C:\Windows\SYSTEM32\ntdll.dll +0x60fd9] GECKO(9228) | #23: RtlSubscribeWnfStateChangeNotification[C:\Windows\SYSTEM32\ntdll.dll +0x60fa4] GECKO(9228) | Assertion failure: aFailureHandling == DontAssertDispatchSuccess || ((bool)(!!(!NS_FAILED_impl(rv)))), at c:/Users/chris/src/central/xpcom/threads/AbstractThread.cpp:74 GECKO(9228) | #01: mozilla::ChromiumCDMProxy::Shutdown (c:\users\chris\src\central\dom\media\gmp\chromiumcdmproxy.cpp:364) GECKO(9228) | #02: mozilla::dom::MediaKeys::Shutdown (c:\users\chris\src\central\dom\media\eme\mediakeys.cpp:103) GECKO(9228) | #03: mozilla::dom::MediaKeys::~MediaKeys (c:\users\chris\src\central\dom\media\eme\mediakeys.cpp:69) GECKO(9228) | #04: mozilla::dom::MediaKeys::cycleCollection::DeleteCycleCollectable (c:\users\chris\src\central\obj-i686-pc-mingw32\dist\include\mozilla\dom\mediakeys.h:50) GECKO(9228) | #05: SnowWhiteKiller::~SnowWhiteKiller (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:2656) GECKO(9228) | #06: nsCycleCollector::FreeSnowWhite (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:2840) GECKO(9228) | #07: nsCycleCollector::BeginCollection (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3843) GECKO(9228) | #08: nsCycleCollector::Collect (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3693) GECKO(9228) | #09: nsCycleCollector::ShutdownCollect (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3603) GECKO(9228) | #10: nsCycleCollector::Shutdown (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:3897) GECKO(9228) | #11: nsCycleCollector_shutdown (c:\users\chris\src\central\xpcom\base\nscyclecollector.cpp:4216) GECKO(9228) | #12: mozilla::ShutdownXPCOM (c:\users\chris\src\central\xpcom\build\xpcominit.cpp:987) GECKO(9228) | #13: XRE_TermEmbedding (c:\users\chris\src\central\toolkit\xre\nsembedfunctions.cpp:226) GECKO(9228) | #14: mozilla: :BootstrapImpl::XRE_InitChildProcess (c:\users\chris\src\central\toolkit\xre\bootstrap.cpp:65) GECKO(9228) | #15: content_process_main (c:\users\chris\src\central\ipc\contentproc\plugin-container.cpp:64) GECKO(9228) | #16: NS_internal_main (c:\users\chris\src\central\browser\app\nsbrowserapp.cpp:286) GECKO(9228) | #17: wmain (c:\users\chris\src\central\toolkit\xre\nswindowswmain.cpp:118) GECKO(9228) | #18: __scrt_common_main_seh (f:\dd\vctools\crt\vcstartup\src\startup\exe_common.inl:253) GECKO(9228) | #19: BaseThreadInitThunk[C:\Windows\System32\KERNEL32.DLL +0x162c4] GECKO(9228) | #20: RtlSubscribeWnfStateChangeNotification[C:\Windows\SYSTEM32\ntdll.dll +0x60fd9] GECKO(9228) | #21: RtlSubscribeWnfStateChangeNotification[C:\Windows\SYSTEM32\ntdll.dll +0x60fa4] GECKO(9228) | [GPU 7404] WARNING: pipe error: 109: file c:/Users/chris/src/central/ipc/chromium/src/chrome/common/ipc_channel_win.cc, line 346 GECKO(9228) | [Parent 9228] WARNING: NS_ENSURE_TRUE(maybeContext) failed: file c:/Users/chris/src/central/xpcom/threads/nsThread.cpp, line 1015 GECKO(9228) | [Parent 9228] WARNING: 'NS_FAILED(RemovePermissionChangeObserver())', file c:/Users/chris/src/central/dom/notification/Notification.cpp, line 671 GECKO(9228) | [GPU 7404] WARNING: '!compMgr', file c:/Users/chris/src/central/xpcom/components/nsComponentManagerUtils.cpp, line 63 GECKO(9228) | nsStringStats
Comment on attachment 8862673 [details] Bug 1360389 - Have ChromiumCDMParent inform CDMProxy of shutdown. https://reviewboard.mozilla.org/r/134536/#review137550
Attachment #8862673 - Flags: review?(gsquelart) → review+
Pushed by cpearce@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4573433fcf30 Have ChromiumCDMParent inform CDMProxy of shutdown. r=gerald
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: